# kktestdata

./: README.md  pyproject.toml
kktestdata/: __init__.py  base.py  check.py  error.py  helpers.py  registry.py  utils.py
kktestdata/catalog/: huggingface.py  openml.py
kktestdata/dataset/huggingface/: __init__.py  boatrace_2020_2021.py  boatrace_original_20210101_20210630.py  boatrace_original_20210701_20211230.py
kktestdata/dataset/openml/: APSFailure.py  Amazon_employee_access.py  Another-Dataset-on-used-Fiat-500.py  Bank_Customer_Churn.py  Bioresponse.py  Diabetes130US.py  E-CommereShippingData.py  Fashion-MNIST.py  Fitness_Club.py  Food_Delivery_Time.py  GiveMeSomeCredit.py  HR_Analytics_Job_Change_of_Data_Scientists.py  Is-this-a-good-customer.py  KDDCup99.py  MIC.py  Marketing_Campaign.py  NATICUSdroid.py  QSAR-TID-11.py  QSAR_fish_toxicity.py  SDSS17.py  __init__.py  airfoil_self_noise.py  anneal.py  bank-marketing.py  blood-transfusion-service-center.py  churn.py  coil2000_insurance_policies.py  concrete_compressive_strength.py  covertype.py  credit-g.py  credit_card_clients_default.py  customer_satisfaction_in_airline.py  diabetes.py  diamonds.py  eye_movements.py  gas-drift.py  hazelnut-spread-contaminant-detection.py  healthcare_insurance_expenses.py  helena.py  heloc.py  (+25 more)
kktestdata/datasets/: __init__.py  blood-transfusion-service-center.py
kktestdata/model/: __init__.py  huggingface.py  openml.py
tests/: test_all.py  test_dataset_openml.py
