[project]
name = "kktestdata"
version = "1.0.16"
requires-python = ">= 3.12.2"
description = "Dataset formatting helpers for evaluation data across pandas/numpy/polars/torch/cv2"
dependencies = [
    'kklogger @ git+https://github.com/kazukingh01/kklogger.git@f6ddcc099da0102a14a62d67bede1b1c30eaf839',
    'requests>=2.32.0',
    'openml==0.15.1',
    'datasets==4.4.1',
    'huggingface-hub==1.1.7',
]

[project.optional-dependencies]
numpy = ["numpy>=2.2.0"]
pandas = ["pandas>=2.2.0"]
polars = ["polars>=1.15.0"]
torch = ["torch>=2.0.0"]
sklearn = ['scikit-learn>=1.5.2']

[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "kktestdata",
    "kktestdata.dataset",
    "kktestdata.dataset.openml",
    "kktestdata.dataset.huggingface",
    "kktestdata.catalog",
    "kktestdata.model",
]
